# MCP_servers

./: .dockerignore  .gitignore  BACKEND_API_DOCUMENTATION.md  Dockerfile  LICENSE  example_vector_store_usage.py  main.py  pyproject.toml
.github/workflows/: data-modeling-AutoDeployTrigger-e4ae1be9-a810-453b-9214-3bc810119022.yml  trivy-scan.yml
api/v1/routers/: __init__.py  conversation.py  data_assets.py  health.py  lms.py  mcp_tools.py
core/: config.py  data_model_service.py  data_product_service.py  exceptions.py  lms_service.py  logging_config.py  mcp_client.py  models.py  storage.py
core/authentication/: auth_middleware.py  auth_token.py
core/prompts/: main.py
schemas/: api.py  base.py  data_model.py  data_product.py  health.py  lms_service.py  token.py
